// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelatedProducts component renders correctly with no related products 1`] = `<div />`;

exports[`RelatedProducts component renders correctly with related products 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div
          class="RelatedProducts"
        >
          <div
            class="Tabs Tabs--secondary"
          >
            <div
              class="TabsBar"
            >
              <div
                class="Container"
              >
                <div
                  class="MuiContainer-root tabStyles-ContainerRoot-1 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root tabStyles-TabsRoot-2"
                  >
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-group"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-3 Mui-selected"
                          data-gtm="{\\"id\\":\\"related-products-filter1\\",\\"label\\":\\"group\\",\\"action\\":\\"Filter – Related Products\\"}"
                          id="tab-group"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            group
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-4 PrivateTabIndicator-colorPrimary-5 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-group"
              class="MuiGrid-root TabPanel MuiGrid-item"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-8 TabPanelBox"
              >
                <div
                  class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Black, Gloss, 6x7x8symbol name"
                        class="header-picture Media Media--contain"
                        src="http://localhost:8000"
                      />
                      <div
                        class="body"
                      >
                        <h5
                          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root text Typography MuiTypography-h6"
                        >
                          Shadow Black, Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="children text"
                        >
                          MC: pdp.nobb.label
                          :
                           
                          <b>
                            external-product-code
                          </b>
                        </div>
                        <div
                          class="footer"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="icon"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RelatedProducts component renders correctly with related products without groups 1`] = `<div />`;

exports[`RelatedProducts component renders correctly without Brand and External Product code on related products 1`] = `
<div>
  <div
    class="Section Section--alabaster"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
        >
          MC: pdp.relatedProducts.title
        </h2>
        <div
          class="RelatedProducts"
        >
          <div
            class="Tabs Tabs--secondary"
          >
            <div
              class="TabsBar"
            >
              <div
                class="Container"
              >
                <div
                  class="MuiContainer-root tabStyles-ContainerRoot-9 MuiContainer-maxWidthXl"
                >
                  <div
                    class="MuiTabs-root tabStyles-TabsRoot-10"
                  >
                    <div
                      class="MuiTabs-scrollable"
                      style="width: 99px; height: 99px; position: absolute; top: -9999px; overflow: scroll;"
                    />
                    <div
                      class="MuiTabs-scroller MuiTabs-scrollable"
                      style="margin-bottom: 0px;"
                    >
                      <div
                        aria-label="tabs"
                        class="MuiTabs-flexContainer"
                        role="tablist"
                      >
                        <button
                          aria-controls="tabpanel-group"
                          aria-selected="true"
                          class="MuiButtonBase-root MuiTab-root MuiTab-textColorPrimary tabStyles-TabRoot-11 Mui-selected"
                          data-gtm="{\\"id\\":\\"related-products-filter1\\",\\"label\\":\\"group\\",\\"action\\":\\"Filter – Related Products\\"}"
                          id="tab-group"
                          role="tab"
                          tabindex="0"
                          type="button"
                        >
                          <span
                            class="MuiTab-wrapper"
                          >
                            group
                          </span>
                          <span
                            class="MuiTouchRipple-root"
                          />
                        </button>
                      </div>
                      <span
                        class="PrivateTabIndicator-root-12 PrivateTabIndicator-colorPrimary-13 MuiTabs-indicator"
                        style="left: 0px; width: 0px;"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-labelledby="tab-group"
              class="MuiGrid-root TabPanel MuiGrid-item"
              heading="group"
              id="tabpanel-group"
              role="tabpanel"
            >
              <div
                class="MuiBox-root MuiBox-root-16 TabPanelBox"
              >
                <div
                  class="MuiGrid-root Grid MuiGrid-container MuiGrid-spacing-xs-3"
                >
                  <div
                    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Black, Gloss, 6x7x8symbol name"
                        class="header-picture Media Media--contain"
                        src="http://localhost:8000"
                      />
                      <div
                        class="body"
                      >
                        <h5
                          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root text Typography MuiTypography-h6"
                        >
                          Shadow Black, Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="children text"
                        >
                          MC: pdp.nobb.label
                          :
                           
                          <b>
                            external-product-code
                          </b>
                        </div>
                        <div
                          class="footer"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="icon"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Black, Gloss, 6x7x8symbol name"
                        class="header-picture Media Media--contain"
                        src="http://localhost:8000"
                      />
                      <div
                        class="body"
                      >
                        <h5
                          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root text Typography MuiTypography-h6"
                        >
                          Shadow Black, Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="children text"
                        />
                        <div
                          class="footer"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="icon"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-6 MuiGrid-grid-lg-3"
                  >
                    <a
                      aria-disabled="false"
                      class="MuiButtonBase-root OverviewCard OverviewCard--clickable"
                      data-gtm="{\\"id\\":\\"cta-click1\\",\\"label\\":\\"name - Shadow Black, Black, Gloss, 6x7x8symbol - MC: pdp.relatedProducts.viewDetails\\",\\"action\\":\\"/en/path/\\"}"
                      href="/en/path/"
                      role="button"
                      tabindex="0"
                    >
                      <img
                        alt="Shadow Black, Black, Gloss, 6x7x8symbol name"
                        class="header-picture Media Media--contain"
                        src="http://localhost:8000"
                      />
                      <div
                        class="body"
                      >
                        <h5
                          class="MuiTypography-root title title--no-brand-logo Typography MuiTypography-h5"
                        >
                          name
                        </h5>
                        <h6
                          class="MuiTypography-root text Typography MuiTypography-h6"
                        >
                          Shadow Black, Black, Gloss, 6x7x8symbol
                        </h6>
                        <div
                          class="children text"
                        />
                        <div
                          class="footer"
                        >
                          <span
                            class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                            type="button"
                          >
                            <span>
                              MC: pdp.relatedProducts.viewDetails
                            </span>
                            <svg
                              aria-hidden="true"
                              class="icon"
                              data-testid="internal"
                              focusable="false"
                            />
                          </span>
                        </div>
                      </div>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
